--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "node test.js"
+    "test": "node --allow-natives-syntax test.js"
   },
   "repository": {
     "type": "git",
@@ -23,7 +23,7 @@
   },
   "homepage": "https://github.com/cobblers-children/faceoff#readme",
   "dependencies": {
-    "bench-node": "^0.8.0"
+    "bench-node": "^0.9.0"
   },
   "devDependencies": {
     "prom-client": "^15.1.1"
