--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "npm run unit && npm run integration",
-    "unit": "node --test --test-reporter spec",
+    "unit": "c8 node --test --test-reporter spec",
     "integration": "node --allow-natives-syntax integration.js"
   },
   "repository": {
@@ -28,7 +28,15 @@
     "bench-node": "^0.9.0"
   },
   "devDependencies": {
+    "c8": "^10.1.3",
     "chai": "^5.2.1",
     "prom-client": "^15.1.1"
+  },
+  "c8": {
+    "all": true,
+    "src": ["./lib"],
+    "extension": [".js"],
+    "report-dir": "./coverage",
+    "reporter": "lcov"
   }
 }
