--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
   },
   "keywords": [
     "benchmark",
-    "compare",
-    "diff"
+    "performance",
+    "speed",
+    "test"
   ],
   "author": "Jason Marshall",
   "license": "MIT",
