--- a/package.json
+++ b/package.json
@@ -28,8 +28,9 @@
   "homepage": "https://github.com/cobblers-children/faceoff#readme",
   "devDependencies": {
     "c8": "^10.1.3",
-    "chai": "^5.2.1",
+    "chai": "^4.5.0",
     "chai-as-promised": "^8.0.1",
+    "chai-string": "^1.6.0",
     "prom-client": "^15.1.1"
   },
   "c8": {
