--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "faceoff",
-  "version": "0.7.2",
+  "version": "0.8.0",
   "description": "Compare performance across multiple versions of your code",
   "main": "lib/index.js",
   "type": "module",
@@ -15,6 +15,7 @@
   },
   "keywords": [
     "benchmark",
+    "bench-node",
     "performance",
     "regression",
     "speed",
@@ -45,6 +46,6 @@
     "reporter": "lcov"
   },
   "dependencies": {
-    "bench-node": "^0.10.0"
+    "bench-node": "^0.11.0"
   }
 }
