--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "url": "https://github.com/cobblers-children/faceoff/issues"
   },
   "homepage": "https://github.com/cobblers-children/faceoff#readme",
+  "engines": {
+    "node": "^20 || ^22 || >=24"
+  },
   "devDependencies": {
     "c8": "^10.1.3",
     "chai": "^4.5.0",
