--- a/package.json
+++ b/package.json
@@ -37,8 +37,7 @@
     "c8": "^10.1.3",
     "chai": "^4.5.0",
     "chai-as-promised": "^8.0.1",
-    "chai-string": "^1.6.0",
-    "prom-client": "^15.1.1"
+    "chai-string": "^1.6.0"
   },
   "c8": {
     "all": true,
