--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
   "engines": {
     "node": "^20 || ^22 || >=24"
   },
+  "files": [
+    "lib/**"
+  ],
   "devDependencies": {
     "c8": "^10.1.3",
     "chai": "^4.5.0",
