Change load logic to avoid tripping up require/import differences for ESM modules.
This should address both #13 and #14

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "npm run unit && npm run integration",
     "unit": "c8 node --allow-natives-syntax --test --test-reporter spec",
     "watch": "node --allow-natives-syntax --test --watch --test-reporter spec",
-    "integration": "node --allow-natives-syntax integration.js"
+    "integration": "node --allow-natives-syntax examples/prom-client.js && node --allow-natives-syntax examples/p-limit.js"
   },
   "repository": {
     "type": "git",
