--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "faceoff",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "Compare performance across multiple versions of your code",
   "main": "lib/index.js",
   "type": "module",
@@ -41,6 +41,7 @@
     "c8": "^10.1.3",
     "chai": "^4.5.0",
     "chai-as-promised": "^8.0.1",
+    "chai-spies": "^1.1.0",
     "chai-string": "^1.6.0"
   },
   "c8": {
@@ -55,7 +56,6 @@
     "reporter": "lcov"
   },
   "dependencies": {
-    "bench-node": "^0.14.0",
-    "chai-spies": "^1.1.0"
+    "bench-node": "^0.14.0"
   }
 }
