--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "unit": "node --allow-natives-syntax --test --test-reporter spec test/unit/*.js",
     "integration": "node --allow-natives-syntax --test --test-reporter spec test/integration/*.js",
     "test": "npm run unit && npm run integration",
-    "coverage": "c8 npm run tests",
+    "coverage": "c8 npm run test",
     "watch": "node --allow-natives-syntax --test --watch --test-reporter spec 'test/unit/**'",
     "smoke": "node --allow-natives-syntax examples/prom-client.js && node --allow-natives-syntax examples/p-limit.js"
   },
